# 33GOD

./: .cursorrules  .env.example  .gitignore  .gitmodules  .kilocodemodes  .plane.json  .taskmasterconfig  .windsurfrules  33god-user-journeys.txt  AGENTS.md  CLAUDE.md  LICENSE  README.md  SLIMDOWN_NOTES.md  TASK.md  components.toml  compose.yml  docker-compose.yml  justfile  mise.toml  pyproject.toml
.claude/: session-tracking.json  settings.json
.claude/commands/: reconcile.md
.claude/hooks/: README.md  bloodbank-publisher.sh  setup.md  test-integration.sh
.codegraph/: daemon.pid
.git-state-snapshots/20260325-183937/: branch_all_verbose.txt  branch_current.txt  context.txt  fsck.txt  head-file.txt  reflog_head.txt  remote_verbose.txt  show_ref.txt  status.txt  symbolic_ref_head.txt  worktree_list.txt
.githooks/: README.md  commit-msg  pre-commit
.state/heartbeat-router/: state.json
.state/hookd-bridge/: outbox.db-shm
TalkyTonny/: LOCAL_TRAINING.md  mise.toml
_bmad/: GOD.md
_bmad-output/bmb-creations/: 33god-repo-custodian.agent.yaml  agent-plan-god-submodule-manager.md
_bmad-output/implementation-artifacts/: spec-33god-slimdown-submodules.md
_bmad-output/planning-artifacts/: epic-god-42-sanity-check-2026-04-26.md  epic-god-42-v3-stories.md  epic-god-43-v3-stories.md  prd.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
bmad/: config.yaml
docs/: ARCHITECTURE.md  BB-2-verification-report.md  BB-4-dlq-triage-report.md  BLOODBANK-EVENT-BUS-LIVE-AUDIT-2026-02-21.md  BMAD-AUDIT-2026-02-12.md  COMPOSE-STARTUP-GUIDE.md  DEV_README.md  FINAL-SWARM-REPORT.md  GOD-14-PHASE-A-REPORT.md  GOD-14.md  GOD-15.md  GOD-IMPLEMENTATION-SUMMARY.md  GOD-SYSTEM-GUIDE.md  GOD.md  HOLOCENE-AGENT-VIEW-REAL-DATAFLOW.md  HOLYFIELDS-PHASE1-COMPLETE.md  INFRA-DISPATCHER-MIGRATION.md  ImplementationPlan-WalkingSkeleton.md  MonetizationDirectorAgent.md  NODE-RED-REMEDIATION.md  OPS.md  PRD.md  ProjectOverview.md  QA-VALIDATION-REPORT.md  SCHEMA-DRIFT-AUDIT-2026-02-23.md  SCHEMA-DRIFT-AUDIT.md  SECURITY-INCIDENT-2026-02-13.md  bmm-workflow-status.yaml  product-brief.md  service-registry-discussion.md  stakeholder-actions.md  unified-requirements-map.md
heartbeat-consumer/: CONTRIBUTING.md  README.md  pyproject.toml
heartbeat-consumer/examples/: cack.heartbeat.json
heartbeat-consumer/heartbeat_consumer/: __init__.py  config.py  consumer.py  handlers.py  py.typed  runner.py
heartbeat-tick/: README.md  publisher.py  pyproject.toml
heartbeat-tick/systemd/: heartbeat-tick.env.example  heartbeat-tick.service
hookd/: .env.example  AGENTS.md  CUTOVER_CHECKLIST.md  Cargo.toml  DEV_README.md  GOD.md  README.md  bridge.py  mise.toml
hookd/_bmad-output/implementation-artifacts/: hookd-sprint-status.yaml
hookd/_bmad-output/planning-artifacts/: hookd-product-brief.md  hookd-tech-spec.md
hookd/config/: hooks.example.json
hookd/src/: config.rs  enrichment.rs  envelope.rs  main.rs  publisher.rs
mise-tasks/: infra_status  task_new
pipeline-mcp-hub/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
pipeline-mcp-hub/pipeline_hub/: __init__.py  __main__.py  hub_tools.py  registry.py  server.py
pipeline-mcp-hub/pipeline_hub/domains/: __init__.py  base.py  plane.py
plane/: .env.example  .env.template  .plane.env  compose.yml
qwen3-tts/: clone_voice.py  pyproject.toml
scripts/: rererere_heartbeat_worker.py  task-complexity-report.json
services/: AGENTS.md  registry.yaml
services/agent-feedback-router/: README.md  pyproject.toml
services/agent-feedback-router/src/: __init__.py  config.py  consumer.py
services/agent-voice-soprano/: .env.example  .gitignore  README.md  pyproject.toml  run.sh  voice-profiles.example.yaml
services/agent-voice-soprano/src/: __init__.py  config.py  main.py  profiles.py  speaker.py
services/candystore/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/candystore/docs/: sprint-plan-hybrid-architecture-phase1-2026-01-11.md
services/candystore/migrations/: 20260221_001_asset_registry.sql  README.md
services/candystore/src/: __init__.py  config.py  consumer.py  database.py  main.py  models.py
services/candystore/src/api/: __init__.py  routes.py
services/candystore/tests/: __init__.py  conftest.py  test_consumer.py
services/fireflies-transcript-processor/: Dockerfile  README.md  pyproject.toml
services/fireflies-transcript-processor/src/: __init__.py  config.py  consumer.py  models.py
services/fireflies-transcript-processor/tests/: test_consumer.py
services/mutation-ledger/: pyproject.toml
services/mutation-ledger/src/: config.py  consumer.py  db.py  enrichment.py  models.py  query.py  vector_store.py
services/mutation-ledger/tests/: test_enrichment.py  test_integration.py
services/templates/fireflies-transcript-processor/: Dockerfile  README.md  cookiecutter.json  pyproject.toml
services/templates/fireflies-transcript-processor/src/: __init__.py  config.py  consumer.py
services/templates/generic-consumer/{{cookiecutter.service_slug}}/: Dockerfile  README.md  pyproject.toml
services/templates/generic-consumer/{{cookiecutter.service_slug}}/src/: config.py  consumer.py  models.py
services/theboard-meeting-trigger/: .env.example  Dockerfile  README.md  pyproject.toml
services/theboard-meeting-trigger/src/theboard_meeting_trigger/: __init__.py  __main__.py  config.py  consumer.py  consumer_simple.py  meeting_creator.py  models.py
services/theboard-meeting-trigger/tests/: test_consumer.py
services/tonny/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
services/tonny/docs/: DEPLOYMENT_REPORT.md  INTEGRATION.md  LETTA_GUIDE.md
services/tonny/scripts/: quickstart.sh
services/tonny/src/: __init__.py  config.py  consumer.py  letta_agent.py  main.py  models.py  tts_client.py
services/tonny/src/api/: __init__.py
services/tonny/tests/: __init__.py  conftest.py  test_letta_agent.py  test_models.py  test_tts_client.py
tmp/: upload_lora.py
(+266 files in other folders)
