[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heartbeat-consumer"
version = "1.0.0"
description = "Per-agent heartbeat consumer for 33GOD Bloodbank"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "33GOD", email = "admin@33god.ai"},
]
keywords = ["bloodbank", "33god", "heartbeat", "faststream", "rabbitmq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "faststream[rabbit]>=0.5.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
heartbeat-consumer = "heartbeat_consumer.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["heartbeat_consumer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
