[package]
name = "hookd"
version = "0.1.0"
edition = "2021"
description = "Daemon that enriches Claude Code hook events with repo context and publishes to Bloodbank"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
