[project]
name = "agent-feedback-router"
version = "0.2.0"
description = "Routes agent.feedback.requested events to AgentForge feedback endpoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bloodbank",
    "pydantic-settings>=2.0.0",
    "faststream[rabbit]>=0.5.0",
    "orjson>=3.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
bloodbank = { path = "../../bloodbank/trunk-main", editable = true }
