[project]
name = "agent-voice-soprano"
version = "0.1.0"
description = "Bloodbank consumer that autoplays inbound agent messages with Soprano TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "faststream[rabbit]>=0.5.0",
  "pydantic-settings>=2.5.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
agent-voice-soprano = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
