[project]
name = "mutation-ledger"
version = "0.2.0"
description = "Semantic mutation intelligence: enriches Claude Code tool events and embeds into per-project Qdrant collections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "aiosqlite>=0.20.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
]

[project.scripts]
hookd-query = "src.query:main"
mutation-ledger = "src.consumer:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
