[project]
name = "tonny-agent"
version = "0.1.0"
description = "Letta-powered AI agent consumer for processing voice transcriptions and generating TTS responses"
authors = [
    {name = "Jarad DeLorenzo", email = "jaradd@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    # FastAPI for REST API and health checks
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # RabbitMQ async client for Bloodbank events
    "aio-pika>=9.5.0",

    # Letta agent framework
    "letta>=0.5.0",

    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.40.0",

    # ElevenLabs TTS
    "elevenlabs>=1.0.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
